k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poppobuilder
  labels:
    name: poppobuilder
    app: poppobuilder-suite
